objects/HealthCloudGA__Program__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__EndDate__c</fullName>
        <description>Date that the program ends for the entire organization.</description>
        <inlineHelpText>Date that the program ends for the entire organization.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether a record is active or not.</description>
        <inlineHelpText>Indicates whether a record is active or not.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Rate__c</fullName>
        <description>Indicates the reimbursement for the measurement period for a single patient for the specific program (example: Medicare CCM program).</description>
        <inlineHelpText>Indicates the reimbursement for the measurement period for a single patient for the specific program (example: Medicare CCM program).</inlineHelpText>
        <label>Rate</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReportName__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StartDate__c</fullName>
        <description>Date the program begins for the entire organization.</description>
        <inlineHelpText>Date the program begins for the entire organization.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Target__c</fullName>
        <description>Target time to be completed per patient for the measurement period.</description>
        <inlineHelpText>Target time to be completed per patient for the measurement period.</inlineHelpText>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TimeSpan__c</fullName>
        <description>Measurement period.</description>
        <inlineHelpText>Measurement period.</inlineHelpText>
        <label>Time Span</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__UnitOfMeasure__c</fullName>
        <description>Unit of measurement for time to be completed per patient in the measurement period (goes with the “Target” field).</description>
        <inlineHelpText>Unit of measurement for time to be completed per patient in the measurement period (goes with the “Target” field).</inlineHelpText>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__UserRoleField__c</fullName>
        <description>Types of users that qualify for measurement of time, if applicable.</description>
        <inlineHelpText>Types of users that qualify for measurement of time, if applicable.</inlineHelpText>
        <label>User Role Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>HealthCloudGA__CMSRiskScoring</fullName>
        <active>true</active>
        <label>CMS Risk Scoring</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__ChronicCareManagement</fullName>
        <active>true</active>
        <label>Chronic Care Management</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>